# realtime-price-tracker

./: .env.example  README.md  pyproject.toml
.idx/: dev.nix
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/endpoints/: __init__.py  auth.py  items.py
src/app/core/: celery_app.py  config.py  db.py  logging_config.py  security.py
src/app/models/: __init__.py  item.py  user.py
src/app/schemas/: __init__.py  item.py  user.py
src/app/services/: __init__.py  item_service.py  user_service.py
src/app/tasks/: scraper.py
src/buyhatke_tracker/: __init__.py
tests/: conftest.py
tests/api/: test_auth.py  test_items.py
